@@ -7,7 +7,7 @@ export(
 	GKgamma,print.GKgamma,
 	glmlist, loglmlist, summarize, 
 	print.Kappa,
-	mosaic3d, split3d, range3d)
+	mosaic3d, split3d, range3d, center3d)
 
 S3method(mosaic, glm)
 S3method(sieve, glm)
